# v-rex-term

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: main.c
